deploy/openshift/egress-demo/infra/kuadrant-install.yaml
# Kuadrant operator v1.3.1 installation from upstream community catalog
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuadrant-system
